<resources>
    <string name="app_name">Power Fitness</string>
    <string name="login">Login</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="password">Password</string>
    <string name="repassword">Conform Password</string>
    <string name="email">Email</string>
    <string name="SignOut">SignOut</string>
    <string name="title_activity_main">main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Power Fitness</string>
    <string name="nav_header_subtitle">Salle de Sport</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="consulteseance">Consulter Seance</string>
    <string name="activite">Activities</string>
    <string name="ajoutseance">Ajouter Seance</string>

    <string name="musculation">Musculation</string>
    <string name="aerobic">Aerobic</string>
    <string name="echauffement">Echauffement</string>
    <string name="gymnastqiue">Gymnastique</string>


    <string name="action_disconnect">Disconnect</string>
    <string name="text_description">Votre Activities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Bienvenue</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="ex1">EX1</string>
    <string name="ex2">EX2</string>
    <string name="ex3">EX3</string>
    <string name="ex4">EX4</string>
    <string name="musculation1">Biceps Curl Assis</string>
    <string name="musculation2">Biceps Curl Debout</string>
    <string name="musculation3">Cuisses Fessiers Squat</string>
    <string name="musculation4">Dos Tirage Un Bras</string>
    <string name="atr1">A.T.R Ventre Au Mur</string>
    <string name="atr2">A.T.R Forcé</string>
    <string name="appui1">En Appui Facial</string>
    <string name="appui2">En Appui Facial Bassin Haut</string>


    <string-array name="spinner_seance">
        <item>Musculation</item>
        <item>Gymnastique</item>
        <item>Aerobic</item>
        <item>Echauffement</item>
    </string-array>

    <string-array name="spinner_coach">
        <item>Walid Saleh</item>
        <item>Amir Bacha</item>
    </string-array>

</resources>
