<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_seance"
            android:icon="@drawable/ic_fitness"
            android:title="@string/consulteseance" />

        <item
            android:id="@+id/nav_gestionseance"
            android:icon="@drawable/icon_seance"
            android:title="@string/ajoutseance" />
        <item
            android:id="@+id/nav_musculation"
            android:icon="@drawable/icon_musculation"
            android:title="@string/musculation" />

        <item
            android:id="@+id/nav_aerobic"
            android:icon="@drawable/icon_aerobic"
            android:title="@string/aerobic" />

        <item
            android:id="@+id/nav_gymnastique"
            android:icon="@drawable/icon_gym"
            android:title="@string/gymnastqiue" />
    </group>



</menu>
