<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.salledesport.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_seance"
        android:name="com.example.salledesport.ui.slideshow.SlideshowFragment"
        android:label="@string/consulteseance"
        tools:layout="@layout/fragment_seance" />

    <fragment
        android:id="@+id/nav_gestionseance"
        android:name="com.example.salledesport.ui.tools.ToolsFragment"
        android:label="@string/ajoutseance"
        tools:layout="@layout/fragment_gestionseance" />
    <fragment
        android:id="@+id/nav_musculation"
        android:name="com.example.salledesport.ui.musculation.musculation"
        android:label="@string/musculation"
        tools:layout="@layout/fragment_musculation" />
    <fragment
        android:id="@+id/nav_aerobic"
        android:name="com.example.salledesport.ui.aerobic.aerobic"
        android:label="@string/aerobic"
        tools:layout="@layout/fragment_aerobic" />
    <fragment
        android:id="@+id/nav_gymnastique"
        android:name="com.example.salledesport.ui.gymnastique.gymnastique"
        android:label="@string/gymnastqiue"
        tools:layout="@layout/fragment_gymnastique" />


</navigation>